# flasked

./: .env.sh  .gitignore  README.md  __init__.py  auth.py  blog.py  db.py  pyproject.toml
templates/: base.html
templates/blog/: index.html  update.html
