[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = "A working example of flask's official tutorial"
authors = ["dj-mc <49037253+dj-mc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
rope = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
